--- a/artemisa-front/package.json
+++ b/artemisa-front/package.json
@@ -30,6 +30,9 @@
     "firebase": "^9.10.0",
     "ionicons": "^6.0.3",
     "jquery": "^3.6.1",
+    "ngx-filter-pipe": "^2.1.2",
+    "ngx-order-pipe": "^2.2.0",
+    "ngx-pagination": "^6.0.2",
     "rxjs": "~6.6.0",
     "save": "^2.9.0",
     "sweetalert2": "^11.4.37",
