--- a/artemisa-front/angular.json
+++ b/artemisa-front/angular.json
@@ -30,8 +30,8 @@
                 "output": "./svg"
               }
             ],
-            "styles": ["src/theme/variables.scss", "src/global.scss", "node_modules/bootstrap/dist/css/bootstrap.min.css"],
-            "scripts": ["node_modules/jquery/dist/jquery.min.js", "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"],
+            "styles": ["src/theme/variables.scss", "src/global.scss"],
+            "scripts": ["node_modules/jquery/dist/jquery.min.js"],
             "aot": false,
             "vendorChunk": true,
             "extractLicenses": false,
@@ -96,8 +96,8 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.spec.json",
             "karmaConfig": "karma.conf.js",
-            "styles": ["src/theme/variables.scss", "src/global.scss", "node_modules/bootstrap/dist/css/bootstrap.min.css"],
-            "scripts": ["node_modules/jquery/dist/jquery.min.js", "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"],
+            "styles": ["src/theme/variables.scss", "src/global.scss"],
+            "scripts": ["node_modules/jquery/dist/jquery.min.js"],
             "assets": [
               {
                 "glob": "favicon.ico",
@@ -148,7 +148,8 @@
   "cli": {
     "schematicCollections": [
       "@ionic/angular-toolkit"
-    ]
+    ],
+    "analytics": false
   },
   "schematics": {
     "@ionic/angular-toolkit:component": {
