--- a/artemisa-front/package.json
+++ b/artemisa-front/package.json
@@ -31,6 +31,7 @@
     "firebase": "^9.10.0",
     "ionicons": "^6.0.3",
     "jquery": "^3.6.1",
+    "ngx-currency": "^2.5.3",
     "ngx-filter-pipe": "^2.1.2",
     "ngx-order-pipe": "^2.2.0",
     "ngx-pagination": "^6.0.2",
