--- a/artemisa-front/package.json
+++ b/artemisa-front/package.json
@@ -29,8 +29,10 @@
     "bootstrap": "^5.2.2",
     "bootstrap-icons": "^1.9.1",
     "firebase": "^9.10.0",
+    "html2canvas": "^1.4.1",
     "ionicons": "^6.0.3",
     "jquery": "^3.6.1",
+    "jspdf": "^2.5.1",
     "ngx-currency": "^2.5.3",
     "ngx-filter-pipe": "^2.1.2",
     "ngx-order-pipe": "^2.2.0",
