--- a/artemisa-front/package.json
+++ b/artemisa-front/package.json
@@ -14,9 +14,11 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^14.2.6",
+    "@angular/cdk": "^14.2.6",
     "@angular/common": "^14.0.0",
     "@angular/core": "^14.0.0",
     "@angular/forms": "^14.0.0",
+    "@angular/material": "^14.2.6",
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
@@ -33,6 +35,7 @@
     "ionicons": "^6.0.3",
     "jquery": "^3.6.1",
     "jspdf": "^2.5.1",
+    "ng-apexcharts": "^1.7.4",
     "ngx-currency": "^2.5.3",
     "ngx-filter-pipe": "^2.1.2",
     "ngx-order-pipe": "^2.2.0",
