--- a/artemisa-front/angular.json
+++ b/artemisa-front/angular.json
@@ -30,7 +30,12 @@
                 "output": "./svg"
               }
             ],
-            "styles": ["src/theme/variables.scss", "src/global.scss", "node_modules/ngx-spinner/animations/ball-spin.css"],
+            "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+              "src/theme/variables.scss",
+              "src/global.scss",
+              "node_modules/ngx-spinner/animations/ball-spin.css"
+            ],
             "scripts": ["node_modules/jquery/dist/jquery.min.js"],
             "aot": false,
             "vendorChunk": true,
@@ -96,7 +101,12 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.spec.json",
             "karmaConfig": "karma.conf.js",
-            "styles": ["src/theme/variables.scss", "src/global.scss", "node_modules/ngx-spinner/animations/ball-spin.css"],
+            "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+              "src/theme/variables.scss",
+              "src/global.scss",
+              "node_modules/ngx-spinner/animations/ball-spin.css"
+            ],
             "scripts": ["node_modules/jquery/dist/jquery.min.js"],
             "assets": [
               {
